--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PhotoAlbum</string>
+    <string name="take_picture">Take Picture</string>
+    <string name="private_album">Private</string>
+    <string name="public_album"> Public </string>
 </resources>
