--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="photo_album">Create A Photo Album</string>
     <string name="public_album_label">Public Albums</string>
     <string name="private_album_label">Private Albums</string>
+    <string name="back">Back</string>
 
 </resources>
